# icartdaq

./: .gitignore  Accum.cc  Baseline_module.cc  BlockReader.hh  CMakeLists.txt  Channel.cc  Channel.hh  ChannelSummer.cc  ChannelSummer.hh  Codes.cc  Codes.hh  CodesMain.cc  Converter_module.cc  CreateNewFragmentGenerator.rb  DS50Run002211.txt  Decoder.cc  Decoder.hh  Encoder.cc  Encoder.hh  ExpDecode.cc  ExpDecode.hh  FileReader.cc  FileReader.hh  HuffmanTable.cc  HuffmanTable.hh  MakeSample.cc  Properties.hh  StatsKeeper.hh  Summer_module.cc  SymProb.cc  SymProb.hh  SymTable.cc  V1190FragmentWriter.hh  V172xFileReader.hh  V172xFileReader_generator.cc  V172xFragmentWriter.hh  V172xSimulator.hh  V172xSimulator_generator.cc  channel_algs.cc  classes.h  (+3 more)
artdaq-demo/: CMakeLists.txt
artdaq-demo/ArtModules/: ASCIIDump_module.cc  ArtdaqDemoBuildInfo_module.cc  Baseline_module.cc  CAEN2795Dump_module.cc  CMakeLists.txt  CompressionChecker_module.cc  Compression_module.cc  Converter_module.cc  DS50CompressionChecker_module.cc  DataCharacterizer_module.cc  Decompression_module.cc  EventDump_module.cc  NthEvent_module.cc  Summer_module.cc  ToyDump_module.cc  channel_algs.cc  channel_algs.hh  converter_algs.cc  converter_algs.hh
artdaq-demo/ArtModules/DQM/: CMakeLists.txt  RootApplication_module.cc  WFViewer_module.cc
artdaq-demo/ArtModules/fcl/: asciiDump.fcl  compressedEventComparison.fcl  compressedEventDump.fcl  eventDump.fcl  rawEventDump.fcl  toyDump.fcl
artdaq-demo/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in
artdaq-demo/Compression/: Accum.cc  Accum.hh  BlockReader.cc  BlockReader.hh  BuildHuffmanTable.cc  BuildRiceTable.cc  CMakeLists.txt  Codes.cc  Codes.hh  CodesMain.cc  DS50Run002211.txt_reversed.txt  DecodeHuffman.cc  Decoder.cc  Decoder.hh  EncodeDS50.cc  EncodeHuffman.cc  Encoder.cc  Encoder.hh  ExpDecode.cc  ExpDecode.hh  HuffmanTable.cc  HuffmanTable.hh  MakeSample.cc  Makefile  Properties.hh  README.txt  StatsKeeper.hh  SymCode.hh  SymProb.cc  SymProb.hh  SymTable.cc  SymTable.hh  Tree.hh  huffman.hs  pod_table.txt  subexp0_table.txt  subexp1_table.txt  tester.cc
artdaq-demo/Generators/: AsciiSimulator.hh  AsciiSimulator_generator.cc  CAEN2795.hh  CAEN2795FakeData.hh  CAEN2795FakeData_generator.cc  CAEN2795_generator.cc  CMakeLists.txt  NormalSimulator.hh  NormalSimulator_generator.cc  PatternSimulator.hh  PatternSimulator_generator.cc  ToySimulator.hh  ToySimulator_generator.cc  UDPReceiver.hh  UDPReceiver_generator.cc  V172xFileReader.hh  V172xFileReader_generator.cc  V172xSimulator.hh  V172xSimulator_generator.cc
artdaq-demo/Overlays/: FragmentType.cc  FragmentType.hh  FragmentTypes.hh  ToyFragment.cc  ToyFragment.hh  ToyFragmentWriter.hh  V1190Fragment.cc  V1190Fragment.hh  V1190FragmentWriter.hh  V1495Fragment.cc  V1495Fragment.hh  V172xFragment.cc  V172xFragment.hh  V172xFragmentWriter.hh
artdaq-demo/Products/: CMakeLists.txt  Channel.cc  Channel.hh  CompressedV172x.cc  CompressedV172x.hh  classes.h  classes.h.Channel  classes_def.xml
examples/: README.examples
examples/asciiSimulator/: README  installArtDaqDemo.sh  quick-start.sh
examples/cfgManagement/: quick-start.sh
examples/complexSystems/: quick-start.sh
examples/metrics/: generateAggregator.rb  generateBoardReaderMain.rb  generateEventBuilder.rb  makeConfigs.rb  quick-start.sh
examples/mfextensions/: quick-start.sh  start2x2x2System.sh
examples/udpReceiver/: quick-start.sh
exe/: FileReader.cc  FileReader.hh  rawToRoot.cc
icartdaq/ArtModules/: CAEN2795Dump_module.cc  CAEN2795WriteICARUSDataFile_module.cc  CMakeLists.txt  PhysCrateDump_module.cc  PhysCrateViewer_module.cc  PhysCrateWriteICARUSDataFile_module.cc
icartdaq/Generators/: A2795.h  A2795Board.cc  A2795Board.h  CAEN2795.hh  CAEN2795FakeData.hh  CAEN2795FakeData_generator.cc  CAEN2795_GeneratorBase.cc  CAEN2795_GeneratorBase.hh  CAEN2795_generator.cc  CAEN2795_generator.cc_new  CMakeLists.txt  Cudpux.cc  Cudpux.h  PhysCrate.cc  PhysCrate.h  PhysCrateData.hh  PhysCrateData_generator.cc  PhysCrateFakeData.hh  PhysCrateFakeData_generator.cc  PhysCrate_GeneratorBase.cc  PhysCrate_GeneratorBase.hh  structures.h  veto.cc  workerThread.cpp
icarus-artdaq/ArtModules/: CMakeLists.txt  PhysCrateDump_module.cc  PhysCrateViewer_module.cc  packs.h
icarus-artdaq/BuildInfo/: GetPackageBuildInfo.cc.in
icarus-artdaq/Generators/: CMakeLists.txt  PhysCrateData.hh  PhysCrate_GeneratorBase.cc  PhysCrate_GeneratorBase.hh  workerThread.h
icarus-artdaq/Products/: CMakeLists.txt
setup/: setupICARTDAQ  setup_icartdaq.sh
test/Generators/: CMakeLists.txt
test/Generators/fcl/: ToySimulator_t.fcl  V172xFileReader_t.fcl  V172xSimulator_t.fcl
tools/: CMakeLists.txt  DemoControl.rb  RunDriver.rb  demo_driver.cc  demo_utilities.rb  downloadArtDaq-v1_07_01.sh  downloadDeps.sh  driver.cc  generateAggregator.rb  generateAggregatorMain.rb  generateAscii.rb  generateBoardReaderMain.rb  generateEventBuilder.rb  generateEventBuilderMain.rb  generateNormal.rb  generatePattern.rb  generateToy.rb  generateUDP.rb  generateV1720.rb  generateWFViewer.rb  installArtDaqDemo.sh  installArtdaqDemo.sh  manage1x2x2System.sh  manage2x2System.sh  manage2x2x2System.sh  manage5x2x2System.sh  manageSystem.sh  mpi_cleaner.sh  mpi_wrapper.sh  quick-start.sh  setupDemoEnvironment.sh  start2x2System.sh  start2x2x2System.sh  startSystem.sh  test_driver.cc  xt_cmd.sh
tools/fcl/: CAEN2795_FakeData_driver.fcl  CAEN2795_driver.fcl  PhysCrate_FakeData_driver.fcl  ToySimulator.fcl  V172xSimulator.fcl  WFViewer.fcl  driver.fcl  readRoot.fcl  splitter.fcl  viewWaveform.fcl
tools/snippets/: CMakeLists.txt  makeConfigs.rb
ups/: product_deps
